📞 Ajout champ téléphone au formulaire contact - Laure rappelle directement

--- a/test-contact.html
+++ b/test-contact.html
@@ -113,7 +113,7 @@
             
             <div class="feature">
                 <h3><span class="emoji">📝</span>Formulaire Optimisé</h3>
-                <p>Champs spécifiques : prénom, email, profil (étudiant/professionnel/entrepreneur), description du défi</p>
+                <p>Champs spécifiques : prénom, email, téléphone, profil (étudiant/professionnel/entrepreneur), description du défi</p>
             </div>
             
             <div class="feature">
@@ -141,7 +141,8 @@
             <h3>🔄 Changements Apportés</h3>
             <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
                 <li><strong>Titre :</strong> "Parlons de votre défi ensemble" (au lieu de "Let's Connect!")</li>
-                <li><strong>Formulaire :</strong> Champs adaptés au coaching (prénom, profil, défi)</li>
+                <li><strong>Formulaire :</strong> Champs adaptés au coaching (prénom, email, téléphone, profil, défi)</li>
+                <li><strong>Approche :</strong> Laure rappelle directement (plus personnel et efficace)</li>
                 <li><strong>Sections :</strong> Aide par profil (étudiants, professionnels, entrepreneurs)</li>
                 <li><strong>Contact :</strong> Informations françaises et professionnelles</li>
                 <li><strong>CTA :</strong> Liens vers témoignages et méthode</li>
